Fix the social link icon overlapping issue when 3 or more icon links exists on mobile

--- a/src/components/Sections/CommonSocialsLinks/CommonSocialsLinks.module.scss
+++ b/src/components/Sections/CommonSocialsLinks/CommonSocialsLinks.module.scss
@@ -29,7 +29,11 @@
             grid-template-rows: repeat(3, 28.4%);
         }
     }
-
+    &__onlyRow {
+      @media only screen and (max-width:642px) {
+        grid-template-rows: repeat(2, 49%);
+      }
+    }
      &__icons {
         box-sizing: border-box;
         @media only screen and (max-width:1024px) {
