--- a/src/components/Sections/SectionContainer/SectionContainer.module.scss
+++ b/src/components/Sections/SectionContainer/SectionContainer.module.scss
@@ -48,10 +48,43 @@
     transform: rotate(180deg);
 
     img {
-      width: 40px;
-      height: 100%;
+      width: auto;
+      height: 15px;
       object-fit: cover;
       cursor: pointer;
+    }
+    .arrow_container {
+
+      /* cubic-bezier-easing = sine / mehr Beispiele: https://easings.net/ */
+      animation: bounce 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+      cursor: pointer;
+      height: 15px;
+    }
+
+    .arrow_down {
+      height: 3px;
+      background: white;
+      transform: rotate(25deg);
+      transform-origin: 0% 0%;
+      border-radius: 1px;
+
+      &:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        bottom: 0;
+        left: 100%;
+        border-radius: 1px;
+        background: white;
+        transform: rotate(-50deg);
+        transform-origin: 0% 100%;
+      }
+    }
+    @keyframes bounce {
+      50% {
+        transform: translateY(-5px);
+      }
     }
   }
 }
